backup/metadata/objects/Room_Occupancy__c/Room_Occupancy__c.object-meta.xml
<CustomObject>
    <label>Room Occupancy</label>
    <nameField>
        <displayFormat>RO-{000000}</displayFormat>
        <label>Room Occupancy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Room Occupancys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>