backup/metadata/objects/Room_Occupancy__c/fields/Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_End_Date__c</fullName>
    <inlineHelpText>Actual end date</inlineHelpText>
    <label>Actual End Date</label>
    <type>Date</type>
</CustomField>