backup/metadata/objects/Room_Occupancy__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <inlineHelpText>Reason for cancellation</inlineHelpText>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resident Request</fullName>
            </value>
            <value>
                <fullName>Family Request</fullName>
            </value>
            <value>
                <fullName>Medical Reasons</fullName>
            </value>
            <value>
                <fullName>Facility Unsuitable</fullName>
            </value>
            <value>
                <fullName>Behavioral Issues</fullName>
            </value>
            <value>
                <fullName>Passed Away</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>