backup/metadata/objects/Room_Occupancy__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Room Occupancies</relationshipLabel>
    <relationshipName>Room_Occupancies</relationshipName>
    <type>Lookup</type>
</CustomField>