backup/metadata/objects/Room_Occupancy__c/fields/End_of_Stay_Notes__c.field-meta.xml
<CustomField>
    <fullName>End_of_Stay_Notes__c</fullName>
    <label>End of Stay Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>