backup/metadata/objects/Room_Occupancy__c/fields/Expected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_End_Date__c</fullName>
    <inlineHelpText>Expected end date (for respite)</inlineHelpText>
    <label>Expected End Date</label>
    <type>Date</type>
</CustomField>