backup/metadata/objects/Room_Occupancy__c/fields/Follow_On_Decision__c.field-meta.xml
<CustomField>
    <fullName>Follow_On_Decision__c</fullName>
    <label>Follow-On Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transition to Permanent Residency</fullName>
            </value>
            <value>
                <fullName>Extension of Respite Stay</fullName>
            </value>
            <value>
                <fullName>Scheduled Discharge (Returning Home)</fullName>
            </value>
            <value>
                <fullName>Transfer to Medical Facility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>