backup/metadata/objects/Room_Occupancy__c/fields/Occupancy_End__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_End__c</fullName>
    <label>Occupancy End</label>
    <type>DateTime</type>
</CustomField>