backup/metadata/objects/Room_Occupancy__c/fields/Occupancy_Start__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Start__c</fullName>
    <label>Occupancy Start</label>
    <type>DateTime</type>
</CustomField>