backup/metadata/objects/Room_Occupancy__c/fields/Occupancy_Type__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Type__c</fullName>
    <inlineHelpText>Type of occupancy</inlineHelpText>
    <label>Occupancy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Respite</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Trial Period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>