backup/metadata/objects/Room_Occupancy__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Room Occupancies</relationshipLabel>
    <relationshipName>Room_Occupancies</relationshipName>
    <type>Lookup</type>
</CustomField>