backup/metadata/objects/Room_Occupancy__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Resident occupying the room</description>
    <label>Resident</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Room Occupancies</relationshipLabel>
    <relationshipName>Room_Occupancies</relationshipName>
    <type>Lookup</type>
</CustomField>