backup/metadata/objects/Room_Occupancy__c/fields/Resident_Room_Rate__c.field-meta.xml
<CustomField>
    <fullName>Resident_Room_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resident Room Rate</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Room Occupancies</relationshipLabel>
    <relationshipName>Room_Occupancies</relationshipName>
    <type>Lookup</type>
</CustomField>