backup/metadata/objects/Room_Occupancy__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <description>Room being occupied</description>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Occupancies</relationshipLabel>
    <relationshipName>Occupancies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>