backup/metadata/objects/Room_Occupancy__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Occupancy start date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>