backup/metadata/objects/Room_Occupancy__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Occupancy status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reserved</fullName>
                <default>true</default>
                <label>Reserved</label>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Occupied</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <isActive>false</isActive>
                <label>Active</label>
            </value>
            <value>
                <fullName>Planned</fullName>
                <isActive>false</isActive>
                <label>Planned</label>
            </value>
            <value>
                <fullName>Temporarily Vacant (Resident on Leave)</fullName>
                <isActive>false</isActive>
                <label>Temporarily Vacant (Resident on Leave)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>