backup/metadata/objects/Room_Occupancy__c/fields/Weekly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Rate__c</fullName>
    <description>Weekly rate for this occupancy</description>
    <label>Weekly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>